--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.0",
+    "@nestjs/apollo": "^12.0.11",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.0.11",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.2.0",
     "@supabase/supabase-js": "^2.39.3",
+    "graphql": "^16.8.1",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
     "stripe": "^14.12.0"
@@ -36,7 +40,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.11.4",
+    "@types/node": "^20.11.5",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
@@ -44,7 +48,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.5.0",
-    "prettier": "^3.2.2",
+    "prettier": "^3.2.4",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.0",
