--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -38,7 +38,7 @@ spec:
               memory: "32Mi"
           readinessProbe:
             httpGet:
-              path: /backend/health
+              path: /backend/rest/health
               port: 8080
             initialDelaySeconds: 60
             periodSeconds: 30
@@ -47,7 +47,7 @@ spec:
             failureThreshold: 30
           livenessProbe:
             httpGet:
-              path: /backend/health
+              path: /backend/rest/health
               port: 8080
             initialDelaySeconds: 30
             periodSeconds: 10
